--- a/tesis/page_penilaianproposaltesis.html
+++ b/tesis/page_penilaianproposaltesis.html
@@ -117,46 +117,47 @@
 
                 <!-- Scoring -->
                 <h5 class="fw-bold text-primary mb-3">Unsur Unsur Penilaian:</h5>
+                <p class="text-muted mb-4"><strong>Skala Penilaian:</strong> keseluruhan unsur penilaian diisi dengan rentang skor 0 (minimum) hingga 100 (maksimum)</p>
                 <div class="mb-3">
                     <div class="row gy-2">
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>1. Judul mendeskripsikan rencana penelitian dengan baik</span>
+                            <span>1. Judul mendeskripsikan rencana penelitian dengan baik (CPMK 4: d3)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>2. Masalah penelitian dirumuskan dengan jelas dan baik</span>
+                            <span>2. Masalah penelitian dirumuskan dengan jelas dan baik (CPMK 1: g5)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>3. Tujuan penelitian dinyatakan dengan jelas, rinci dan dapat dicapai</span>
+                            <span>3. Tujuan penelitian dinyatakan dengan jelas, rinci dan dapat dicapai (CPMK 1: g5)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>4. Tinjauan pustaka menyajikan penelitian terkait dengan jelas dan lengkap serta membahasnya dengan kritis</span>
+                            <span>4. Tinjauan pustaka menyajikan penelitian terkait dengan jelas dan lengkap serta membahasnya dengan kritis (CPMK 4: d3)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>5. Landasan teori menyajikan semua teori yang relevan, dengan sumber pustaka yang memiliki kredibilitas tinggi</span>
+                            <span>5. Landasan teori menyajikan semua teori yang relevan, dengan sumber pustaka yang memiliki kredibilitas tinggi (CPMK 1: g5)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>6. Usulan penelitian secara ilmiah valid, didukung teori yang berlaku, dan secara teknis dapat dilaksanakan</span>
+                            <span>6. Usulan penelitian secara ilmiah valid, didukung teori yang berlaku, dan secara teknis dapat dilaksanakan (CPMK 1: g5)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>7. Peralatan dan bahan penelitian telah disiapkan dengan baik</span>
+                            <span>7. Peralatan dan bahan penelitian telah disiapkan dengan baik (CPMK 1: g5)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>8. Tahapan penelitian disajikan dengan lengkap, rinci dan jelas</span>
+                            <span>8. Tahapan penelitian disajikan dengan lengkap, rinci dan jelas (CPMK 5: e1)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>9. Jadwal penelitian disusun secara realistis</span>
+                            <span>9. Jadwal penelitian disusun secara realistis (CPMK 6: f1)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                         <div class="col-12 d-flex justify-content-between align-items-center">
-                            <span>10. Usulan penelitian ditulis dengan bahasa yang baik, jelas dan mudah dipahami</span>
+                            <span>10. Usulan penelitian ditulis dengan bahasa yang baik, jelas dan mudah dipahami (CPMK 4: d3)</span>
                             <input type="number" class="form-control score-input" style="width:100px" min="0" max="100">
                         </div>
                     </div>
