--- a/tesis/page_penilaianujiantesis.html
+++ b/tesis/page_penilaianujiantesis.html
@@ -112,21 +112,22 @@
 
                 <!-- Scoring -->
                 <h5 class="fw-bold text-primary mb-3">Unsur Penilaian:</h5>
+                <p class="text-muted mb-4"><strong>Skala Penilaian:</strong> keseluruhan unsur penilaian diisi dengan rentang skor 0 (minimum) hingga 100 (maksimum)</p>
 
                 <!-- A. Metodologi -->
                 <div class="mb-4">
                 <h6>A. Metodologi (bobot = 3)</h6>
                 <div class="row gy-2">
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>1. Perumusan masalah</span>
+                    <span>1. Perumusan masalah (CPMK 2: c3)</span>
                     <input type="number" id="skorA1" class="form-control score-input score-A" style="width:100px" min="0" max="100">
                     </div>
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>2. Hasil dan pembahasan</span>
+                    <span>2. Hasil dan pembahasan (CPMK 2: c3)</span>
                     <input type="number" id="skorA2" class="form-control score-input score-A" style="width:100px" min="0" max="100">
                     </div>
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>3. Koherensi</span>
+                    <span>3. Koherensi (CPMK 2: c3)</span>
                     <input type="number" id="skorA3" class="form-control score-input score-A" style="width:100px" min="0" max="100">
                     </div>
                 </div>
@@ -141,11 +142,11 @@
                 <h6>B. Materi (bobot = 3)</h6>
                 <div class="row gy-2">
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>1. Penguasaan materi tesis</span>
+                    <span>1. Penguasaan materi tesis (CPMK 1: g5)</span>
                     <input type="number" id="skorB1" class="form-control score-input score-B" style="width:100px" min="0" max="100">
                     </div>
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>2. Penguasaan materi komprehensif</span>
+                    <span>2. Penguasaan materi komprehensif (CPMK 1: g5)</span>
                     <input type="number" id="skorB2" class="form-control score-input score-B" style="width:100px" min="0" max="100">
                     </div>
                 </div>
@@ -160,11 +161,11 @@
                 <h6>C. Penulisan laporan (bobot = 2)</h6>
                 <div class="row gy-2">
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>1. Sistematika</span>
+                    <span>1. Sistematika (CPMK 4: d3)</span>
                     <input type="number" id="skorC1" class="form-control score-input score-C" style="width:100px" min="0" max="100">
                     </div>
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>2. Redaksional</span>
+                    <span>2. Redaksional (CPMK 4: d3)</span>
                     <input type="number" id="skorC2" class="form-control score-input score-C" style="width:100px" min="0" max="100">
                     </div>
                 </div>
@@ -179,11 +180,11 @@
                 <h6>D. Presentasi (bobot = 2)</h6>
                 <div class="row gy-2">
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>1. Materi presentasi</span>
+                    <span>1. Materi presentasi (CPMK 5: e1)</span>
                     <input type="number" id="skorD1" class="form-control score-input score-D" style="width:100px" min="0" max="100">
                     </div>
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                    <span>2. Teknik penyampaian</span>
+                    <span>2. Teknik penyampaian (CPMK 5: e1)</span>
                     <input type="number" id="skorD2" class="form-control score-input score-D" style="width:100px" min="0" max="100">
                     </div>
                 </div>
