--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <script src="disertasi/seminar1.js"></script>
     <script src="disertasi/seminar2.js"></script>
     <script src="disertasi/publikasidisertasi.js"></script>
-    <script src="disertasi/ujiantertutup.js"></script>
+    <script src="disertasi/ujianTertutup.js"></script>
     <script src="disertasi/naskahakhir.js"></script>
     <script src="disertasi/kinerja.js"></script>
     <script src="disertasi/rekapdisertasi.js"></script>
