--- a/index.html
+++ b/index.html
@@ -67,10 +67,17 @@
         </div>
         <ul class="nav nav-pills flex-column mb-auto">
             <li>
-                <a href="#" class="nav-link">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="collapse" href="#skripsiMenu" role="button" aria-expanded="false">
                     <i class="bi bi-journal-text me-2"></i>
                     <span class="label">Penilaian Skripsi</span>
                 </a>
+                <div class="collapse ps-3" id="skripsiMenu">
+                    <ul class="nav flex-column">
+                        <li><a href="#" onclick="loadPage('skripsi/dashboard_proposalskripsi.html')" class="nav-link">Penilaian Seminar Proposal</a></li>
+                        <li><a href="#" onclick="loadPage('skripsi/dashboard_ujianskripsi.html')" class="nav-link">Penilaian Seminar Akhir</a></li>
+                        <li><a href="#" onclick="loadPage('skripsi/dashboard_rekapskripsi.html')" class="nav-link">Rekapitulasi</a></li>
+                    </ul>
+                </div>
             </li>
             <li>
                 <a class="nav-link dropdown-toggle" data-bs-toggle="collapse" href="#tesisMenu" role="button" aria-expanded="false">
@@ -119,6 +126,9 @@
         </div>
     </div>
 
+    <script src="skripsi/proposalskripsi.js"></script>
+    <script src="skripsi/ujianskripsi.js"></script>
+    <script src="skripsi/rekapskripsi.js"></script>
     <script src="tesis/proposaltesis.js"></script>
     <script src="tesis/publikasis2.js"></script>
     <script src="tesis/ujiantesis.js"></script>
@@ -156,7 +166,13 @@
                 .then(html => {
                     document.getElementById("mainContent").innerHTML = html;
 
-                    if (page === "tesis/dashboard_proposaltesis.html") {
+                    if (page === "skripsi/dashboard_proposalskripsi.html") {
+                        loadProposalSkripsiData(); 
+                    } if (page === "skripsi/dashboard_ujianskripsi.html") {
+                        loadUjianSkripsiData(); 
+                    } if (page === "skripsi/dashboard_rekapskripsi.html") {
+                        loadRekapSkripsiData(); 
+                    } if (page === "tesis/dashboard_proposaltesis.html") {
                         loadProposalData();
                     } if (page === "tesis/dashboard_publikasitesis.html") {
                         loadPublikasiS2Data(); 
