--- a/disertasi/page_beritaseminar2.html
+++ b/disertasi/page_beritaseminar2.html
@@ -163,7 +163,7 @@
         </div>
 
         <div class="mt-5">
-            <a href="../index.html" class="btn btn-secondary">
+            <a href="../index.html?page=disertasiseminar2" class="btn btn-secondary">
                 <i class="bi bi-arrow-left"></i> Kembali ke Dashboard
             </a>
         </div>
