--- a/kemahkerja/page_penilaiankkshift2.html
+++ b/kemahkerja/page_penilaiankkshift2.html
@@ -293,7 +293,7 @@
         </div>
 
         <div class="mt-5">
-            <a href="../index.html" class="btn btn-secondary">← Kembali ke Dashboard</a>
+            <a href="../index.html?page=kkshift2" class="btn btn-secondary">← Kembali ke Dashboard</a>
         </div>
 
     </div>
