--- a/skripsi/dashboard_ujianskripsi.html
+++ b/skripsi/dashboard_ujianskripsi.html
@@ -1,4 +1,4 @@
-<h2 class="fw-bold text-primary">Dashboard ujian Skripsi</h2>
+<h2 class="fw-bold text-primary">Dashboard Ujian Skripsi</h2>
 <p class="text-muted">Menampilkan mahasiswa yang akan ujian skripsi.</p>
 
 <!-- Container for ujian skripsi list -->
