--- a/skripsi/page_penilaianproposalskripsi.html
+++ b/skripsi/page_penilaianproposalskripsi.html
@@ -183,7 +183,7 @@
                 </div>
 
                 <div class="mt-5">
-                    <a href="../index.html" class="btn btn-secondary">
+                    <a href="../index.html?page=proposalskripsi" class="btn btn-secondary">
                         <i class="bi bi-arrow-left"></i> Kembali ke Dashboard
                     </a>
                 </div>
