--- a/disertasi/page_penilaianpublikasi.html
+++ b/disertasi/page_penilaianpublikasi.html
@@ -266,7 +266,7 @@
                 </div>
 
                 <div class="mt-5">
-                    <a href="../index.html" class="btn btn-secondary">
+                    <a href="../index.html?page=publikasidisertasi" class="btn btn-secondary">
                         <i class="bi bi-arrow-left"></i> Kembali ke Dashboard
                     </a>
                 </div>
