--- a/disertasi/page_penilaianseminar1.html
+++ b/disertasi/page_penilaianseminar1.html
@@ -215,7 +215,7 @@
                 </div>
 
                 <div class="mt-5">
-                    <a href="../index.html" class="btn btn-secondary">
+                    <a href="../index.html?page=disertasiseminar1" class="btn btn-secondary">
                         <i class="bi bi-arrow-left"></i> Kembali ke Dashboard
                     </a>
                 </div>
