--- a/disertasi/page_rekapdisertasi.html
+++ b/disertasi/page_rekapdisertasi.html
@@ -154,7 +154,7 @@
         </div> -->
 
         <div class="mt-5">
-            <a href="../index.html" class="btn btn-secondary">
+            <a href="../index.html?page=rekapdisertasi" class="btn btn-secondary">
                 <i class="bi bi-arrow-left"></i> Kembali ke Dashboard
             </a>
         </div>
