--- a/kemahkerja/page_penilaiankkshift3.html
+++ b/kemahkerja/page_penilaiankkshift3.html
@@ -294,7 +294,7 @@
         </div>
 
         <div class="mt-5">
-            <a href="../index.html" class="btn btn-secondary">← Kembali ke Dashboard</a>
+            <a href="../index.html?page=kkshift3" class="btn btn-secondary">← Kembali ke Dashboard</a>
         </div>
 
     </div>
