--- a/kemahkerja/page_penilaiankkstudio.html
+++ b/kemahkerja/page_penilaiankkstudio.html
@@ -319,7 +319,7 @@
         </div>
 
         <div class="mt-5">
-            <a href="../index.html" class="btn btn-secondary">← Kembali ke Dashboard</a>
+            <a href="../index.html?page=kkstudio" class="btn btn-secondary">← Kembali ke Dashboard</a>
         </div>
 
     </div>
