--- a/kemahkerja/page_penilaianpretestkk.html
+++ b/kemahkerja/page_penilaianpretestkk.html
@@ -111,7 +111,7 @@
         </ol>
 
         <div class="mt-5">
-            <a href="../index.html" class="btn btn-secondary">← Kembali ke Dashboard</a>
+            <a href="../index.html?page=pretestkk" class="btn btn-secondary">← Kembali ke Dashboard</a>
         </div>
 
     </div>
