--- a/skripsi/page_penilaianujianskripsi.html
+++ b/skripsi/page_penilaianujianskripsi.html
@@ -208,7 +208,7 @@
                 </div>
 
                 <div class="mt-5">
-                    <a href="../index.html" class="btn btn-secondary">
+                    <a href="../index.html?page=ujianskripsi" class="btn btn-secondary">
                         <i class="bi bi-arrow-left"></i> Kembali ke Dashboard
                     </a>
                 </div>
