--- a/tesis/page_penilaianproposaltesis.html
+++ b/tesis/page_penilaianproposaltesis.html
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="mt-5">
-                    <a href="../index.html" class="btn btn-secondary">
+                    <a href="../index.html?page=proposaltesis" class="btn btn-secondary">
                         <i class="bi bi-arrow-left"></i> Kembali ke Dashboard
                     </a>
                 </div>
