--- a/tesis/page_rekaptesis.html
+++ b/tesis/page_rekaptesis.html
@@ -115,7 +115,7 @@
         </div>
 
         <div class="mt-5">
-            <a href="../index.html" class="btn btn-secondary">
+            <a href="../index.html?page=rekaptesis" class="btn btn-secondary">
                 <i class="bi bi-arrow-left"></i> Kembali ke Dashboard
             </a>
         </div>
